--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "build": "node ./build/build.js",
     "build-r": "npm run build -- rollup",
     "build-w": "npm run build -- webpack",
-    "build:plugin": "npm run build:plugin-specific && npm run build:plugin-all",
+    "build:plugin": "npm run build:plugin-specific && npm run build:plugin-all && npm run build:plugin-all-with-export",
     "build:plugin-specific": "npm run build-r -- testPlugin/module-specific",
-    "build:plugin-all": "npm run build-r -- testPlugin/module-all ",
-    "build:browserify-all": "browserify testApp/browserify/all/testApp.all.js -o testApp/dist/testApp.browserify.all.js",
+    "build:plugin-all": "npm run build-r -- testPlugin/module-all",
+    "build:plugin-all-with-export": "npm run build-r -- testPlugin/module-all-with-export",
+    "build:browserify": "npm run build:browserify-all && npm run build:browserify-all-plugin-with-export",
+    "build:browserify-all": "browserify testApp/browserify/testApp.all.js -o testApp/dist/testApp.browserify.all.js",
+    "build:browserify-all-plugin-with-export": "browserify testApp/browserify/testApp.all-plugin-with-export.js -o testApp/dist/testApp.browserify.all-plugin-with-export.js",
     "build:rollup": "npm run build:rollup-all && npm run build:rollup-specific && npm run build:rollup-specific-plugin-all",
     "build:rollup-all": "npm run build-r -- testApp/rollup/all",
     "build:rollup-specific": "npm run build-r -- testApp/rollup/specific",
