Refactor(buildPlugin): run Rollup from plugin folder
and call a single common "rollup.config.js" file that retrieves the output name from the plugin folder's "package.json" configuration, and the "umdMode" from the command line call arguments.

--- a/testPlugin/module-all-with-export/package.json
+++ b/testPlugin/module-all-with-export/package.json
@@ -3,5 +3,13 @@
   "version": "0.0.1",
   "main": "dist/testPlugin.all-with-export.umd-from-module",
   "module": "src/testPlugin.all-with-export.module",
-  "jsnext:main": "src/testPlugin.all-with-export.module"
+  "jsnext:main": "src/testPlugin.all-with-export.module",
+  "scripts": {
+    "build": "rollup -c ../rollup.config.js"
+  },
+  "devDependencies": {
+    "rollup": "^0.54.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "uglify-es": "^3.3.7"
+  }
 }
