--- a/testPlugin/module-all/package.json
+++ b/testPlugin/module-all/package.json
@@ -3,5 +3,13 @@
   "version": "0.0.1",
   "main": "dist/testPlugin.all.umd-from-module",
   "module": "src/testPlugin.all.module",
-  "jsnext:main": "src/testPlugin.all.module"
+  "jsnext:main": "src/testPlugin.all.module",
+  "scripts": {
+    "build": "rollup -c ../rollup.config.js"
+  },
+  "devDependencies": {
+    "rollup": "^0.54.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "uglify-es": "^3.3.7"
+  }
 }
