--- a/testApp/rollup-webpack-all/package.json
+++ b/testApp/rollup-webpack-all/package.json
@@ -4,7 +4,8 @@
   "main": "all",
   "input": "testApp.all",
   "scripts": {
-    "build": "rollup -c ../rollup.config.js"
+    "build": "rollup -c ../rollup.config.js",
+    "webpack": "webpack --config ../webpack.config.js"
   },
   "dependencies": {
     
