--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "build:browserify-all-plugin-with-export": "browserify testApp/browserify/testApp.all-plugin-with-export.js -o testApp/dist/testApp.browserify.all-plugin-with-export.js",
     "build:rollup": "npm run build:rollup-all && npm run build:rollup-specific && npm run build:rollup-specific-plugin-all",
     "build:rollup-all": "cd testApp/rollup-webpack-all && npm run rollup",
-    "build:rollup-specific": "npm run build-r -- testApp/rollup/specific",
+    "build:rollup-specific": "cd testApp/rollup-webpack-specific && npm run rollup",
     "build:rollup-specific-plugin-all": "npm run build-r -- testApp/rollup/specific-plugin-all",
     "build:webpack": "npm run build:webpack-all && npm run build:webpack-specific && npm run build:webpack-specific-plugin-all",
     "build:webpack-all": "cd testApp/rollup-webpack-all && npm run webpack",
-    "build:webpack-specific": "npm run build-w -- testApp/rollup/specific",
+    "build:webpack-specific": "cd testApp/rollup-webpack-specific && npm run webpack",
     "build:webpack-specific-plugin-all": "npm run build-w -- testApp/rollup/specific-plugin-all"
   },
   "dependencies": {
