--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "build:browserify": "npm run build:browserify-all && npm run build:browserify-all-plugin-with-export",
     "build:browserify-all": "browserify testApp/browserify/testApp.all.js -o testApp/dist/testApp.browserify.all.js",
     "build:browserify-all-plugin-with-export": "browserify testApp/browserify/testApp.all-plugin-with-export.js -o testApp/dist/testApp.browserify.all-plugin-with-export.js",
-    "build:rollup": "npm run build:rollup-all && npm run build:rollup-all-plugin-specific && npm run build:rollup-specific && npm run build:rollup-specific-plugin-all",
+    "build:rollup": "npm run build:rollup-all && npm run build:rollup-all-plugin-specific && npm run build:rollup-all-plugin-all-umd && npm run build:rollup-specific && npm run build:rollup-specific-plugin-all",
     "build:rollup-all": "cd testApp/rollup-webpack-all && npm run rollup",
     "build:rollup-all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run rollup",
+    "build:rollup-all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run rollup",
     "build:rollup-specific": "cd testApp/rollup-webpack-specific && npm run rollup",
     "build:rollup-specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run rollup",
-    "build:webpack": "npm run build:webpack-all && npm run build:webpack-all-plugin-specific && npm run build:webpack-specific && npm run build:webpack-specific-plugin-all",
+    "build:webpack": "npm run build:webpack-all && npm run build:webpack-all-plugin-specific && npm run build:webpack-all-plugin-all-umd && npm run build:webpack-specific && npm run build:webpack-specific-plugin-all",
     "build:webpack-all": "cd testApp/rollup-webpack-all && npm run webpack",
     "build:webpack-all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run webpack",
+    "build:webpack-all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run webpack",
     "build:webpack-specific": "cd testApp/rollup-webpack-specific && npm run webpack",
     "build:webpack-specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run webpack"
   },
@@ -29,6 +31,7 @@
   "devDependencies": {
     "browserify": "^15.2.0",
     "rollup": "^0.54.0",
+    "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-uglify": "^2.0.1",
