Feat(build): add TestApp all Leaflet but UMD-wrapped TestPlugin (specific)
to simulate a situation where the app uses a 3rd party library (typically a Leaflet plugin) that is available in UMD-wrapped version only, not as ES module.
Need to use rollup-plugin-commonjs plugin for Rollup.
Webpack automatically recognizes the UMD-wrapper (at least the one output by Rollup).
Importing the UMD-wrapped version of a plugin that already uses specific Leaflet inner modules is not very realistic, because such a plugin would surely have been built in order to facilitate Tree Shaking, hence being imported by a build engine, therefore probably as an ES module already.

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "build:rollup-all": "cd testApp/rollup-webpack-all && npm run rollup",
     "build:rollup-all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run rollup",
     "build:rollup-all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run rollup",
+    "build:rollup-all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run rollup",
     "build:rollup-specific": "cd testApp/rollup-webpack-specific && npm run rollup",
     "build:rollup-specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run rollup",
     "build:webpack": "npm run build:webpack-all && npm run build:webpack-all-plugin-specific && npm run build:webpack-all-plugin-all-umd && npm run build:webpack-specific && npm run build:webpack-specific-plugin-all",
     "build:webpack-all": "cd testApp/rollup-webpack-all && npm run webpack",
     "build:webpack-all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run webpack",
     "build:webpack-all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run webpack",
+    "build:webpack-all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run webpack",
     "build:webpack-specific": "cd testApp/rollup-webpack-specific && npm run webpack",
     "build:webpack-specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run webpack"
   },
