--- a/package.json
+++ b/package.json
@@ -2,30 +2,29 @@
   "name": "leaflet.test.es-module",
   "version": "0.0.1",
   "scripts": {
-    "build": "node ./build/build.js",
-    "build-r": "npm run build -- rollup",
-    "build-w": "npm run build -- webpack",
-    "build:plugin": "npm run build:plugin-specific && npm run build:plugin-all && npm run build:plugin-all-with-export",
-    "build:plugin-specific": "cd testPlugin/module-specific && npm run build -- --umdMode='UMD-wrapped ES module'",
-    "build:plugin-all": "cd testPlugin/module-all && npm run build -- --umdMode='UMD-wrapped ES module'",
-    "build:plugin-all-with-export": "cd testPlugin/module-all-with-export && npm run build -- --umdMode='UMD-wrapped ES module WITH EXPORT'",
-    "build:browserify": "npm run build:browserify-all && npm run build:browserify-all-plugin-with-export",
-    "build:browserify-all": "browserify testApp/browserify/testApp.all.js -o testApp/dist/testApp.browserify.all.js",
-    "build:browserify-all-plugin-with-export": "browserify testApp/browserify/testApp.all-plugin-with-export.js -o testApp/dist/testApp.browserify.all-plugin-with-export.js",
-    "build:rollup": "npm run build:rollup-all && npm run build:rollup-all-plugin-specific && npm run build:rollup-all-plugin-all-umd && npm run build:rollup-specific && npm run build:rollup-specific-plugin-all",
-    "build:rollup-all": "cd testApp/rollup-webpack-all && npm run rollup",
-    "build:rollup-all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run rollup",
-    "build:rollup-all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run rollup",
-    "build:rollup-all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run rollup",
-    "build:rollup-specific": "cd testApp/rollup-webpack-specific && npm run rollup",
-    "build:rollup-specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run rollup",
-    "build:webpack": "npm run build:webpack-all && npm run build:webpack-all-plugin-specific && npm run build:webpack-all-plugin-all-umd && npm run build:webpack-specific && npm run build:webpack-specific-plugin-all",
-    "build:webpack-all": "cd testApp/rollup-webpack-all && npm run webpack",
-    "build:webpack-all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run webpack",
-    "build:webpack-all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run webpack",
-    "build:webpack-all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run webpack",
-    "build:webpack-specific": "cd testApp/rollup-webpack-specific && npm run webpack",
-    "build:webpack-specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run webpack"
+    "build": "npm run build:plugin && npm run build:app",
+    "build:plugin": "npm run rollup:plugin-specific && npm run rollup:plugin-all && npm run rollup:plugin-all-with-export",
+    "rollup:plugin-specific": "cd testPlugin/module-specific && npm run build -- --umdMode='UMD-wrapped ES module'",
+    "rollup:plugin-all": "cd testPlugin/module-all && npm run build -- --umdMode='UMD-wrapped ES module'",
+    "rollup:plugin-all-with-export": "cd testPlugin/module-all-with-export && npm run build -- --umdMode='UMD-wrapped ES module WITH EXPORT'",
+    "build:app": "npm run browserify && npm run rollup && npm run webpack",
+    "browserify": "npm run browserify:all && npm run browserify:all-plugin-with-export",
+    "browserify:all": "browserify testApp/browserify/testApp.all.js -o testApp/dist/testApp.browserify.all.js",
+    "browserify:all-plugin-with-export": "browserify testApp/browserify/testApp.all-plugin-with-export.js -o testApp/dist/testApp.browserify.all-plugin-with-export.js",
+    "rollup": "npm run rollup:all && npm run rollup:all-plugin-specific && npm run rollup:all-plugin-all-umd && npm run rollup:all-plugin-specific-umd && npm run rollup:specific && npm run rollup:specific-plugin-all",
+    "rollup:all": "cd testApp/rollup-webpack-all && npm run rollup",
+    "rollup:all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run rollup",
+    "rollup:all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run rollup",
+    "rollup:all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run rollup",
+    "rollup:specific": "cd testApp/rollup-webpack-specific && npm run rollup",
+    "rollup:specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run rollup",
+    "webpack": "npm run webpack:all && npm run webpack:all-plugin-specific && npm run webpack:all-plugin-all-umd && npm run webpack:all-plugin-specific-umd && npm run webpack:specific && npm run webpack:specific-plugin-all",
+    "webpack:all": "cd testApp/rollup-webpack-all && npm run webpack",
+    "webpack:all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run webpack",
+    "webpack:all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run webpack",
+    "webpack:all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run webpack",
+    "webpack:specific": "cd testApp/rollup-webpack-specific && npm run webpack",
+    "webpack:specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run webpack"
   },
   "dependencies": {
     "leaflet": "git+https://github.com/ghybs/Leaflet.git#961cfdce2881da54892a18282a3e170027261178"
