Feat(testApp): add all Leaflet with plugin global version
for Rollup build, through rollup-plugin-inject to have the plugin expecting `global.L` being replaced by `import * as L from 'leaflet'`.
This works because the TestPlugin does not try to attach something directly on L namespace, but on its subnamespaces (i.e. L.Control and L.control). If it did, we would have needed to use rollup-plugin-replace (and possibly rollup-plugin-legacy) to replace the L.NewNameSpace by another local variable and export it.
Note: changed 'leaflet' import by 'leaflet2' to symlink to a local version of Leaflet that makes the version available as a build file, instead of having to import package.json.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rollup:all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run rollup",
     "rollup:all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run rollup",
     "rollup:all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run rollup",
+    "rollup:all-plugin-global": "cd testApp/rollup-webpack-all-plugin-global && npm run rollup",
     "rollup:specific": "cd testApp/rollup-webpack-specific && npm run rollup",
     "rollup:specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run rollup",
     "rollup:specific-plugin-all-umd": "cd testApp/rollup-webpack-specific-plugin-all-umd && npm run rollup",
@@ -37,6 +38,7 @@
     "browserify": "^15.2.0",
     "rollup": "^0.54.0",
     "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-inject": "^2.0.0",
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-uglify": "^2.0.1",
