Feat(TestApp): add webpack:all-plugin-global version
using webpack's imports-loader so that it injects 'leaflet2' into the plugin that expects L to be globally available. Similar to rollup-plugin-inject.
In the case of webpack build, we could actually attach something directly into the L namespace: webpack does not consider it as illegal, on the contrary of Rollup.

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "rollup:specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run rollup",
     "rollup:specific-plugin-all-umd": "cd testApp/rollup-webpack-specific-plugin-all-umd && npm run rollup",
     "rollup:specific-plugin-specific-umd": "cd testApp/rollup-webpack-specific-plugin-specific-umd && npm run rollup",
-    "webpack": "npm run webpack:all && npm run webpack:all-plugin-specific && npm run webpack:all-plugin-all-umd && npm run webpack:all-plugin-specific-umd && npm run webpack:specific && npm run webpack:specific-plugin-all && npm run webpack:specific-plugin-all-umd && npm run webpack:specific-plugin-specific-umd",
+    "webpack": "npm run webpack:all && npm run webpack:all-plugin-specific && npm run webpack:all-plugin-all-umd && npm run webpack:all-plugin-specific-umd && npm run webpack:all-plugin-global && npm run webpack:specific && npm run webpack:specific-plugin-all && npm run webpack:specific-plugin-all-umd && npm run webpack:specific-plugin-specific-umd",
     "webpack:all": "cd testApp/rollup-webpack-all && npm run webpack",
     "webpack:all-plugin-specific": "cd testApp/rollup-webpack-all-plugin-specific && npm run webpack",
     "webpack:all-plugin-all-umd": "cd testApp/rollup-webpack-all-plugin-all-umd && npm run webpack",
     "webpack:all-plugin-specific-umd": "cd testApp/rollup-webpack-all-plugin-specific-umd && npm run webpack",
+    "webpack:all-plugin-global": "cd testApp/rollup-webpack-all-plugin-global && npm run webpack",
     "webpack:specific": "cd testApp/rollup-webpack-specific && npm run webpack",
     "webpack:specific-plugin-all": "cd testApp/rollup-webpack-specific-plugin-all && npm run webpack",
     "webpack:specific-plugin-all-umd": "cd testApp/rollup-webpack-specific-plugin-all-umd && npm run webpack",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "browserify": "^15.2.0",
+    "imports-loader": "^0.7.1",
     "rollup": "^0.54.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-inject": "^2.0.0",
